enable rollouts notifications

--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -3,15 +3,15 @@ kind: Rollout
 metadata:
   name: targylyen-nginx
   annotations:
-    # notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-rollout-updated.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-rollout-completed.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-rollout-paused.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-analysis-run-error.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-analysis-run-running.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-scaling-replica-set.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-rollout-completed.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-rollout-paused.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-analysis-run-error.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-analysis-run-running.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-scaling-replica-set.slack: notifications_targylyen
 spec:
   replicas: 1
   strategy:
