disable on-rollout-step-completed

--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -3,7 +3,7 @@ kind: Rollout
 metadata:
   name: targylyen-nginx
   annotations:
-    notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-rollout-updated.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-rollout-completed.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
