--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -4,14 +4,14 @@ metadata:
   name: targylyen-nginx
   annotations:
     # notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-rollout-updated.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-rollout-completed.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-rollout-paused.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-analysis-run-error.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-analysis-run-running.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-scaling-replica-set.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-rollout-updated.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-rollout-completed.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-rollout-paused.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-analysis-run-error.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-analysis-run-running.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-scaling-replica-set.slack: notifications_targylyen
 spec:
   replicas: 1
   strategy:
