--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -32,7 +32,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:stable-alpine-perl  # Replace with your image
+        image: nginx:latest  # Replace with your image
         ports:
         - name: http
           containerPort: 80
