change nginx image tag - enable all rollout notifications

--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -8,9 +8,9 @@ metadata:
     notifications.argoproj.io/subscribe.on-rollout-completed.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-rollout-paused.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-analysis-run-error.slack: notifications_targylyen
-    # notifications.argoproj.io/subscribe.on-analysis-run-running.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-analysis-run-error.slack: notifications_targylyen
+    notifications.argoproj.io/subscribe.on-analysis-run-running.slack: notifications_targylyen
     # notifications.argoproj.io/subscribe.on-scaling-replica-set.slack: notifications_targylyen
 spec:
   replicas: 1
@@ -44,7 +44,7 @@ spec:
       - command:
           - "/bin/sleep"
           - "infinity"
-        image: busybox:latest
+        image: busybox:stable-alpine-perl
         name: busybox
         resources:
           requests:
