--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -44,7 +44,7 @@ spec:
       - command:
           - "/bin/sleep"
           - "infinity"
-        image: busybox:latest
+        image: busybox #latest
         name: busybox
         resources:
           requests:
