change busybox image tag

--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -6,7 +6,7 @@ metadata:
     # notifications.argoproj.io/subscribe.on-rollout-step-completed.slack: notifications_targylyen
     # notifications.argoproj.io/subscribe.on-rollout-updated.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-rollout-completed.slack: notifications_targylyen
-    notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
+    # notifications.argoproj.io/subscribe.on-rollout-aborted.slack: notifications_targylyen
     # notifications.argoproj.io/subscribe.on-rollout-paused.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-analysis-run-failed.slack: notifications_targylyen
     notifications.argoproj.io/subscribe.on-analysis-run-error.slack: notifications_targylyen
@@ -44,7 +44,7 @@ spec:
       - command:
           - "/bin/sleep"
           - "infinity"
-        image: busybox:latest
+        image: busybox
         name: busybox
         resources:
           requests:
