--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -45,7 +45,7 @@ spec:
       - command:
           - "/bin/sleep"
           - "infinity"
-        image: registry.hub.docker.com/library/busybox
+        image: registry.hub.docker.com/library/busybox:error
         name: busybox
         resources:
           requests:
