--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:error #latest #error #stable-alpine-perl  # Replace with your image
+        image: nginx:latest #error #stable-alpine-perl  # Replace with your image
         ports:
         - name: http
           containerPort: 80
